download images and reset start positions

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,14 +15,14 @@ html, body {
 }
 
 .mario {
-  background: url('http://2.bp.blogspot.com/--eKaDgaefgk/U6yayPnDbSI/AAAAAAAABF8/2_oSIBP_3NQ/s1600/Mario.svg-g3438-4294966652.png');
+  background: url('img/mario.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .luigi {
-  background: url('https://mbtskoudsalg.com/images/paper-luigi-png-4.png');
+  background: url('img/luigi.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
